--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
         background-image: url('./src/assets/bg.png');
         background-size: cover;
         background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+      }
+
+      #app {
+        min-height: 100vh;
       }
     </style>
     <meta charset="UTF-8" />
